# SimpleNeuralNetwork

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
OldCode/: nn.cpp
Test/: CMakeLists.txt  main.cpp
Train/: CMakeLists.txt  main.cpp
lib/: NN.cpp  NN.h  readData.cpp  readData.h
